# scramble_scripts

./: Pipfile  pyproject.toml  setup.py
scripts/: OGWR_data_collection.py  add_periods_and_drafts.py  add_team_stats.py  adjust_periods_and_drafts.py  associate_golfers_with_tournament.py  create_tourneys.py  delete_specific_tourney_and_results.py  fix_team_docs.py  generate_token.py  recreate_draft.py  test_method.py  transition_all_periods.py
